# life.rs

./: Cargo.toml  README.md  index.html  index.js
.github/workflows/: build_publish.yml
assets/shaders/: chunk_shader.wgsl
src/: main.rs
src/plugins/: camera_movement.rs  clear_screen.rs  mouse_draw.rs  mouse_position.rs  seeded_rng.rs  stats_boards.rs
src/simulation/: chunk.rs  coords.rs  draw.rs  graphics.rs  mod.rs  plugin.rs  render.rs  rendering.rs  stats_boards.rs  systems.rs  universe.rs  view.rs
src/simulation/engine/: mod.rs
src/simulation/engine/arena_life/: mod.rs
src/simulation/engine/hash_life/: cache.rs  mod.rs  node.rs
src/simulation/engine/hashlife/: cache.rs  hashlife.rs  mod.rs  node.rs
src/simulation/engine/sparse_life/: mod.rs
