[package]
name = "game_of_life"
version = "0.4.0"
edition = "2024"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17.2", features = ["bevy_dev_tools", "wayland"] }
bytemuck = "1.24.0"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
thunderdome = "0.6.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
